--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,21 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+##################################  WARNING !!! To be activated for a real project
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
+##################################  WARNING !!! To be activated for a real project
 # dotenv environment variables file
-.env
-.env.test
+# .env
+# .env.test
+##################################  WARNING !!! To be activated for a real project
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
+##################################  WARNING !!! To be activated for a real project
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
